<resources>
    <string name="app_name">MorGan Movies</string>
    <string name="morgan_movies">Morgan Movies</string>
    <string name="black_widow">Black Widow</string>
    <string name="description">Washed-up MMA fighter Cole Young, unaware of his heritage, and hunted by Emperor Shang Tsung\'s best warrior, Sub-Zero, seeks out and trains with Earth\'s greatest champions as he prepares to stand against the enemies of Outworld in a high stakes battle for the universe.</string>
    <string name="overview">Overview</string>
    <string name="date">11/5/2021</string>
    <string name="release_date">Release Date</string>
    <string name="_7_5">7.5</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="star_rate">Star Rate</string>
    <string name="title_activity_sing_up">SingUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="genres">Genres</string>
    <string name="top_rated">Top Rated</string>
</resources>