<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitXY"
        tools:src="@drawable/black_widow"
        app:layout_constraintBottom_toTopOf="@+id/movie_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_title"
        style="@style/Theme.MovieTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/black_widow"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_image" />

    <TextView
        android:id="@+id/over_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comic_sans"
        android:hint="@string/overview"
        android:paddingStart="15dp"
        android:textColor="@color/Red"
        android:textColorHint="@color/Red"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title">

    </TextView>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/over_view"
        app:layout_constraintBottom_toTopOf="@+id/release_date_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_description"
                style="@style/Theme.MovieTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:paddingStart="15dp"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent">
            </TextView>

        </LinearLayout>
    </ScrollView>



    <TextView
        android:id="@+id/release_date_text"
        style="@style/Theme.MovieTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/release_date"
        android:paddingStart="15dp"
        android:textColor="@color/Red"
        android:textColorHint="@color/Red"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/movie_release_date"></TextView>

    <TextView
        android:id="@+id/movie_release_date"
        style="@style/Theme.MovieTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"></TextView>

    <TextView
        android:id="@+id/movie_vote_rate"
        style="@style/Theme.MovieTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_7_5"
        android:paddingEnd="15dp"
        android:paddingBottom="20dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </TextView>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/star_rate"
        android:src="@drawable/ic_star_rate"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/movie_vote_rate"
        app:layout_constraintTop_toTopOf="@id/movie_vote_rate">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>